styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");

:root {
  margin: 0;
  padding: 0;
  --font-family: "Roboto", sans-serif;
  --text-color: orangered;
  --menu-background: green;
  --font-size: 2rem;

}

* {
  font-family: var(--font-family);
  margin: 0;
}

body,
html {
  height: 100%;
  width: 100%;
  margin: 0;
}

.container {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100%;
  min-height: 100%;
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: hidden;
}

.top {
  display: flex;
  position: sticky;
  z-index: 1;
  top: 0;
  background-color: var(--menu-background);
  color: var(--text-color);
  align-items: center;
  gap: 15px;
  font-size: 1rem;
  font-weight: bold;
  padding: 0.2rem 0.7rem;
  margin-bottom: 0.5rem;
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: black;
  box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);


}

.top button {
  position: relative;
  bottom: 0.1rem;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  color: orangered;
  background: none;
  border: none;
  font-size: 2.5rem;
}

h1 {
  padding: 0.25rem;
  font-size: 1.8rem;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  color: orangered;
  margin-right: auto;
}

.hud {
  display: flex;
  flex-direction: column;
}

.wherethedragonlives {
  display: flex;
  margin: auto;
  z-index: -1;
  align-items: center;
  align-self: center;
  justify-items: center;
}

.dragon {
  position: relative;
  float: right;
  right: 0%
}


.answercontainer {
  display: flex;
  flex-direction: column;
  position: sticky;
  bottom: 0px;
  justify-items: center;
  z-index: 1;
  gap: 0rem;
  padding: 0.25rem;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  background-color: green;
  color: orangered;
  justify-items: center;
  box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);


  .answersmall {
    margin: 0 auto;
    display: flex;
    position: relative;
    left: 20px
  }

  #question {
    font-size: 2rem;
    font-weight: bold;
  }

  #answer {
    width: 4rem;
    align-self: center;
    font-size: 2rem;
    font-weight: bold;
    border: 0;
    background-color: green;
    color: orangered;
    border-radius: 0.5rem;
    border: orangered;
  }

}


#result {
  align-self: center;
  font-size: 2rem;
  flex-basis: 2rem;
}

/*hide arrows from inputfield */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* fade out effect*/
.fadeout {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 2s, opacity 2s linear;
}

.fadereset {
  visibility: visible;
  opacity: 1;
}

.menu {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: var(--menu-background);
  color: var(--text-color);
  -webkit-text-stroke-color: black;
  border-radius: 5px;
  border: 3px solid darkgreen;
  box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.75);
  z-index: 1000;
  text-align: center;
  padding: 10px 0;

}

.menu button {
  font-size: 1.5rem;
  background-color: limegreen;
  margin-left: 3px;
  border-color: green;
  border-radius: 5px;
  color: var(--text-color);
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: black;
}

.menu h2 {
  -webkit-text-stroke-width: 0.7px;
  text-align: center;
  padding-bottom: 10px;
}

.character-select {
  display: grid;
  grid-template-columns: 3.5rem 3.5rem 3.5rem 3.5rem 3.5rem;
  gap: 5px;
  margin: 20px;
}

.character-select button {
  font-size: 2rem;

}

.hidden {
  display: none;
}

/* stuff to make keypad work */
.keypad {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
  margin-top: 10px;
  padding: 5px 20px;
  max-width: 600px;
  align-self: center;
}

.key {
  padding: 10px 20px;
  font-size: var(--font-size);
  font-weight: bold;
  background-color: limegreen;
  border: 1px solid darkgreen;
  color: var(--text-color);
  cursor: pointer;
  border-radius: 5px;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  -webkit-box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.75);
}

.key.active {
  background-color: orangered;
}

@media (max-height: 600px) {
  .keypad {
    visibility: hidden;
    height: 0px
  }
}

#splash {
  position: absolute;
  top: 30%;
  width: 100%;
  background: rgba(255, 255, 255, 0.8);
  /* White semi-transparent */
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 3rem;
  color: var(--text-color);
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  opacity: 0;
  z-index: 1000;
  transition: opacity 0.5s ease;
}

/* Show splash screen with fading */


#splash.show {
  opacity: 1;
}

